Fix footer overflow

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,8 +1,7 @@
 .footer-container{
-   
     background-color: black;
     color: white;
-    height: 60vh;
+    height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 20px;
